5th-Commit-21Feb2021

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                            <input type="text" id="phone-qty" class="form-control text-center" value="1">
                            <button class="btn btn-default"><i id="phone-plus" class="fas fa-plus"></i></button>
                         </div>
-                        <h5 id="unit-price-phone">$1219</h5>
+                        <h5 id="price-phone">$1219</h5>
                         <img src="images/remove.png" alt="" class="remove-item">
                      </div>
                   </div>
@@ -49,7 +49,7 @@
                            <button class="btn btn-default"><i id="case-plus" class="fas fa-plus"></i></button>
 
                         </div>
-                        <h5 id="unit-price-case">$59</h5>
+                        <h5 id="price-case">$59</h5>
                         <img src="images/remove.png" alt="" class="remove-item">
                      </div>
                   </div>
@@ -65,9 +65,9 @@
                      </div>
 
                      <div class="col-md-4 status">
-                        <h5 id="subtotal" >$1,278</h5>
+                        <h5 id="subtotal" >$1278</h5>
                         <h5 id="tax">$0</h5>
-                        <h5 id="total">$1,278</h5>
+                        <h5 id="total">$1278</h5>
                      </div>
                   </div>
                </div>
